# MyCobot_Project

./: .gitignore  README.md  setup_mycobot_ros2.sh
mycobot_ros2/: test.py
mycobot_ros2/src/mycobot_ros2/mycobot_320/mycobot_320_ctrl/: package.xml  setup.cfg  setup.py
mycobot_ros2/src/mycobot_ros2/mycobot_320/mycobot_320_ctrl/data/: config.json
mycobot_ros2/src/mycobot_ros2/mycobot_320/mycobot_320_ctrl/launch/: classify_control.launch.py  classify_control.launch_yeop.py
mycobot_ros2/src/mycobot_ros2/mycobot_320/mycobot_320_ctrl/mycobot_320_ctrl/: classify_control (사본).py  classify_control copy.py  classify_control.py  classify_control3.py  main.py
mycobot_ros2/src/mycobot_ros2/mycobot_320/mycobot_320_ctrl/mycobot_320_ctrl/bak/: classify_control4.py  classify_control5.py  classify_control_yeop.py
mycobot_ros2/src/mycobot_ros2/mycobot_320/mycobot_320_ctrl/mycobot_320_ctrl/data/: custom_data.yaml
mycobot_ros2/src/mycobot_ros2/mycobot_320/mycobot_320_ctrl/mycobot_320_ctrl/src/: config_loader.py  config_loader_yeop.py  robot.py  ros_robot.py  ros_robot_yeop.py  utility.py
mycobot_ros2/src/mycobot_ros2/mycobot_320/mycobot_320_ctrl/mycobot_320_ctrl/src/bak/: ros_robot_testfin.py
mycobot_win/mycobot_main/: config.json  main.py  main_bak.py  main_ros.py
mycobot_win/mycobot_main/src/: config_loader.py  detector.py  pickzone_checker.py  robot.py  ros_detector.py  ros_robot.py  utility.py  (+1 more)
mycobot_win/mycobot_pickup/: config.json  config.py  main.py
mycobot_win/mycobot_place/: 자동추적_2차.py
mycobot_win/mycobot_vision/: YOLO_test.py  custom_data.yaml
(+44 files in other folders)
