<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mycobot_320_ctrl</name>
  <version>0.0.1</version>
  <description>MyCobot 320 Python control package for ROS 2 Humble</description>
  <maintainer email="jy@example.com">jy</maintainer>
  <license>Apache License 2.0</license>

  <!-- 테스트용 의존성 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <!-- 실행 의존성 -->
  <exec_depend>pymycobot</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>mycobot_interfaces</exec_depend>

  <!-- 추가적으로 MyCobot Python SDK를 쓸 경우 -->
  <!-- <exec_depend>pymycobot</exec_depend> -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

